--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,6 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        Homework 1
-    </body>
-</html>
+<h1> Jenny Weng </h1>
+<em> Sophomore studying Cognitive Science and Data Science </em>
+<p> Hi everyone! I'm Jenny, and I'm a sophomore at UC Berkeley. Some fun facts about me are that I grew up in Shanghai, New Zealand, and Southern California, I love listening to Lizzy McAlpine, Harry Styles, and Wolf Alice, and I do contemporary dance and ballet! </p>
+<ul>
+    <li>Berkeley Thai House</li>
+    <li>Riceful</li>
+    <li>Chipotle</li>
+  </ul>
+<img src="assets/img/selfie.png"/>
+<a href="https://www.netflix.com/">Netflix</a>
+<ul>
+    <li> Even though I've had more experience in design than development, I learned from this article how every single design decision should be justified by research or intention.
+        For example, even smaller details like which filters are at the top of the Airbnb app have intention behind them, and the word choice for each line is really specific. 
+    </li>
+    <li>My favorite part of this article was that they incorporated GIFs of the actual app and then an explaination of the design choices. I found it super helpful to see the interface slowly getting put together with the animation and then to be able to read any of the design observations I may have missed. </li>
+    <li>"Know the rules, so you can break em"</li>
+    <li>9</li>
+  </ul>
