--- a/homeworks/hw5/design_responses.html
+++ b/homeworks/hw5/design_responses.html
@@ -48,7 +48,7 @@
                     <ul>
                         <li>
                             <p>On a scale from 1 to 10, how much did you enjoy reading this article? Please briefly explain why.</p>
-                            <p> 10 </p>
+                            <p> 10; I really enjoyed reading this article as it inspired me to look into adding UI interactions and animations into my own work! </p>
                         </li>
                     </ul>
                 </div>
