--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,6 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        MIDTERM
-    </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Inter:700">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Inter:400">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<header>
+			<div id="navbar">
+                <div class="navbar-item">HOME</div>
+                <div class="navbar-item">SAUSAGE OR HOT DOG?</div>
+                <div class="navbar-item">
+                    <a href="menu.html">MENU</a>
+                </div>
+                <div class="navbar-item">COLD DOGS</div>
+                <div class="navbar-item">MAIL ORDER</div>
+                <div class="navbar-item">CATERING</div>
+                <div class="navbar-item">CONTACT US</div>
+                <div class="navbar-item">MERCHANDISE</div>
+            </div>
+		</header>
+
+		<div id="logo-elements">
+            <img src="assets/img/logo.png" alt="">
+            <p>
+                Open Daily Since 1996!
+            </p>
+        </div>
+
+        <section id="red-bar">
+            <p>
+                Top Dog Lakeshore is now open Mon-Sat until 8PM!
+            </p>
+        </section>
+
+        <div id="hero-image">
+            <img src="assets/img/hero.png" alt="">
+        </div>
+
+        <div class="content"> 
+            <section id="paragraph">
+                <p>
+                    Top dog grew out of a boy's love of sausage, a staple in his German immigrants' New York home over the WWII years. Steaks? Tubesteaks! His paper route to a well-mixed neighborhood assured that Italian, Polish, even Hungarian sausages were soon no strangers to that developing appetite and palate. Nor had he far to go to a cart or stand offering kosher style "Franks", usually steeped but better off the griddle.
+                </p>
+                <p>
+                    Then lotsa late nights on the town in San Francisco in the sixties.. but where to find a real natural casing hot dog? Forget it. Doggie Diner was convenient, but ... top dog time! Sampling around for the best frankfurter to sell (and eat!) led to other fine sausages and the idea was born to offer them as hot dogs as well. When no right site could be found in S.F. or Sausalito, hello, Berkeley. That was 1966 and with the paint hardly dry we opened on —surprise— a home football game day. Fifteen minutes later it was full house madness. Talk about learning to host and cook on the run!
+                </p>
+            </section>  
+        </div>
+
+        <div class="testimonials"> 
+            <section id="quotes">
+                    <div class="qitem">
+                        <p>
+                            <em> “Top Dog offers that nostalgic reminder of when food not only tasted great, but was fun!”</em>
+                        </p>
+                    </div>
+                    <div class="qitem">
+                        <p>
+                            <em>“Top Dog is my go-to restaurant after a hard week of midterms and meetings!”</em>
+                        </p>
+                    </div>
+                    <div class="qitem">
+                        <p> 
+                            <em>“Top Dog is my favorite restaurant in all of Berkeley and Northern California in general, 10/10 for sure!</em>
+                        </p>
+                    </div>
+            </section>   
+        </div>
+	</body>
 </html>
