--- a/final/index.html
+++ b/final/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Oski's Record Player</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sigmar">
+    
+    </head>  
     <body>
-        FINAL
+        <div class = "title">
+            Oski's Record Player
+        </div>
+        <div class = "content">
+            <img src = "assets/img/record player blank.png" class = "player">
+            <a href="select.html" class = "button" >Select Song </a>
+        </div>
+
     </body>
 </html>
